--- a/sps-web/src/components/UserModal/UserModal.css
+++ b/sps-web/src/components/UserModal/UserModal.css
@@ -1,4 +1,4 @@
-/* src/components/UserModal/UserModal.css */
+
 
 .modal-overlay {
   position: fixed;
@@ -10,29 +10,44 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 999; /* Certifique-se de ficar acima de outros elementos */
+  z-index: 999;
 }
 
 .modal-content {
   background: #fff;
+  width: auto;
+  min-width: 320px;   
+  max-width: 500px;   
   padding: 24px;
-  width: 400px;
   border-radius: 8px;
-  position: relative;
   box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column; 
 }
 
-/* Específico para UserModal */
-.user-modal-content .close-btn {
-  position: absolute;
-  right: 16px;
-  top: 16px;
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+  margin-bottom: 16px;
+}
+
+.modal-title {
+  margin: 0;
+  font-size: 1.25rem;
+  color: #333;
+  font-weight: 600;
+}
+
+.close-btn {
   background: transparent;
   border: none;
-  font-size: 18px;
+  font-size: 24px;
   cursor: pointer;
+  color: #333;
+  transition: color 0.2s;
 }
 
-.user-modal-content .close-btn:hover {
+.close-btn:hover {
   color: #e12727;
 }
